test/expected/ns_+typedef_i-c++14.out
namespace A::B { typedef int Int; }
          ^
11: error: nested namespace declarations not supported until C++17
